# ServicesSimulatedSearchField

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  fastapi_architecture_template.md  pyproject.toml
app/: main.py
app/api/dependencies/: commands.py  queries.py
app/api/schemas/: search.py  sync.py
app/api/v1/: router.py
app/api/v1/endpoints/: search.py  sync.py
app/commands/: base.py
app/commands/sync/: download_file.py  index_raw.py  parse_file.py
app/core/: config.py  logging.py
app/core/interfaces/: downloader.py  indexer.py  parser.py
app/domain/: material.py  provider.py
app/domain/strategies/: base.py  sync_provider.py
app/infra/: arq_pool.py  downloader.py  meilisearch.py  strategy_factory.py
app/infra/parsers/: base.py  elektrokabel.py  elkab_ural.py  registry.py
app/queries/: base.py
app/queries/search/: search_materials.py
app/workers/: settings.py  tasks.py
providers/: env.elektrokabel  env.elkab_ural
